Squash into CSS fixes

--- a/bundles/org.eclipse.orion.client.ui/web/css/theme.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/theme.css
@@ -318,12 +318,15 @@ a.currentLocation:hover {
 	background-color: #fbfbfb;
 	visibility: hidden;
 	z-index: 150;
-	min-width: 120px;
 	position: absolute;
 	list-style-type: none;
 	border-radius: 3px;
 	border: 1px solid #DDD;
 	padding: 0;
+}
+
+.dropdownMenuOpen {
+	min-width: 120px;
 }
 
 .dropdownSubMenu {
@@ -336,7 +339,7 @@ a.currentLocation:hover {
 }
 
 .dropdownMenu > li {
-	/*min-width: 120px;*/
+	min-width: 120px;
 	padding: 0 2px;
 	display: block;
 }
